jenkins/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: devops
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  - name: slave
    port: 50000
    targetPort: 50000
  selector:
    name: jenkins
